--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'groovyx.android'
 
 android {
     compileSdkVersion 28
@@ -16,6 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests {
+            // recommended by Robolectric
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -25,7 +32,19 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
     implementation 'com.android.support:design:28.0.0-alpha3'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.codehaus.groovy:groovy:2.4.6:grooid'
+    testImplementation 'org.spockframework:spock-core:1.1-groovy-2.4'
+    testImplementation 'cglib:cglib-nodep:3.2.5'
+    testImplementation 'org.objenesis:objenesis:2.6'
+    testImplementation 'org.powermock:powermock-core:1.7.4'
+    testImplementation 'org.powermock:powermock-module-junit4:1.7.4'
+    testImplementation 'org.powermock:powermock-module-junit4-rule:1.7.4'
+    testImplementation 'org.powermock:powermock-classloading-xstream:1.7.4'
+    testImplementation "org.robolectric:robolectric:3.8"
+    testImplementation 'com.github.hkhc:electricspock:0.9'
+    testImplementation 'org.robolectric:shadows-support-v4:3.4-rc2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
