--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0-alpha3'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.codehaus.groovy:groovy:2.4.6:grooid'
     testImplementation 'org.spockframework:spock-core:1.1-groovy-2.4'
