--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.ssheetz.myweather"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -14,7 +14,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     testOptions {
@@ -25,17 +25,27 @@ android {
     }
 }
 
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support:support-v4:28.0.0-alpha3'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
-    implementation 'com.android.support:design:28.0.0-alpha3'
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.google.code.gson:gson:2.8.0'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.codehaus.groovy:groovy:2.4.6:grooid'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+
+    // Spock testing a webserver
+    testImplementation("com.squareup.okhttp3:mockwebserver:3.11.0")
+    testImplementation 'com.squareup.okhttp3:okhttp:3.11.0'
+
+
+    testImplementation 'org.codehaus.groovy:groovy:2.4.12:grooid'
     testImplementation 'org.spockframework:spock-core:1.1-groovy-2.4'
     testImplementation 'cglib:cglib-nodep:3.2.5'
     testImplementation 'org.objenesis:objenesis:2.6'
@@ -43,9 +53,24 @@ dependencies {
     testImplementation 'org.powermock:powermock-module-junit4:1.7.4'
     testImplementation 'org.powermock:powermock-module-junit4-rule:1.7.4'
     testImplementation 'org.powermock:powermock-classloading-xstream:1.7.4'
-    testImplementation "org.robolectric:robolectric:3.8"
-    testImplementation 'com.github.hkhc:electricspock:0.9'
-    testImplementation 'org.robolectric:shadows-support-v4:3.4-rc2'
+
+    // allows you to use Robolectric with Spock (not only JUnit), you can then use things like android Log in unit testing
+//    testImplementation "org.robolectric:robolectric:3.8"
+//    testImplementation "org.robolectric:robolectric:3.9"
+//    testImplementation 'org.robolectric:robolectric:4.0-beta-1' //https://stackoverflow.com/questions/50870425/robolectric-does-not-support-api-level-28
+//    testImplementation 'com.github.hkhc:electricspock:0.9'
+//    testImplementation 'org.robolectric:shadows-support-v4:3.4-rc2'
+
+
+    testImplementation 'junit:junit:4.12'
+
+
+    // mocking JSONObject (getJSONObject...)
+    testImplementation "org.json:json:20180813"
+
+    // Spock on Android
+//    androidTestImplementation "com.andrewreitz:spock-android:2.0.0"
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
